--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <script src="p5.min.js"></script>
+    <script src="./libraries/p5.min.js"></script>
+    <script src="./scripts/character.js"></script>
     <script src="sketch.js"></script>
     <style> body {padding: 0; margin: 0;} </style>
   </head>
