Added rocket && background mountains

--- a/index.html
+++ b/index.html
@@ -1,9 +1,17 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <!-- Libraries -->
     <script src="./libraries/p5.min.js"></script>
+
+    <!-- Custom scripts -->
     <script src="./scripts/character.js"></script>
+    <script src="./scripts/scenery.js"></script>
+    <script src="./scripts/canyon.js"></script>
+
+    <!-- Main script -->
     <script src="sketch.js"></script>
+
     <style> body {padding: 0; margin: 0;} </style>
   </head>
   <body>
