Added mountains and recursive trees

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <script src="./libraries/p5.min.js"></script>
 
     <!-- Custom scripts -->
+    <script src="./scripts/recursiveTree.js"></script>
+    <script src="./scripts/mountain.js"></script>
     <script src="./scripts/stars.js"></script>
     <script src="./scripts/backgroundMountains.js"></script>
     <script src="./scripts/character.js"></script>
