Render tree to graphics layer & extracted rocket to file

--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
     <script src="./libraries/p5.min.js"></script>
 
     <!-- Custom scripts -->
-    <script src="./scripts/recursiveTree.js"></script>
-    <script src="./scripts/mountain.js"></script>
     <script src="./scripts/stars.js"></script>
     <script src="./scripts/backgroundMountains.js"></script>
-    <script src="./scripts/character.js"></script>
     <script src="./scripts/scenery.js"></script>
+    <script src="./scripts/rocket.js"></script>
+    <script src="./scripts/recursiveTree.js"></script>
+    <script src="./scripts/character.js"></script>
+    <script src="./scripts/mountain.js"></script>
     <script src="./scripts/canyon.js"></script>
 
     <!-- Main script -->
