--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 
     <!-- Custom scripts -->
     <script src="./scripts/stars.js"></script>
+    <script src="./scripts/cloud.js"></script>
     <script src="./scripts/backgroundMountains.js"></script>
     <script src="./scripts/scenery.js"></script>
     <script src="./scripts/rocket.js"></script>
