--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <script src="./libraries/p5.min.js"></script>
 
     <!-- Custom scripts -->
-    <script src="./scripts/stars.js"></script>
     <script src="./scripts/cloud.js"></script>
+    <script src="./scripts/stars.js"></script>
     <script src="./scripts/backgroundMountains.js"></script>
     <script src="./scripts/scenery.js"></script>
     <script src="./scripts/rocket.js"></script>
@@ -14,6 +14,7 @@
     <script src="./scripts/character.js"></script>
     <script src="./scripts/mountain.js"></script>
     <script src="./scripts/canyon.js"></script>
+    <script src="./scripts/flagpole.js"></script>
 
     <!-- Main script -->
     <script src="sketch.js"></script>
