--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <script src="./scripts/recursiveTree.js"></script>
     <script src="./scripts/character.js"></script>
     <script src="./scripts/mountain.js"></script>
+    <script src="./scripts/platform.js"></script>
     <script src="./scripts/canyon.js"></script>
     <script src="./scripts/flagpole.js"></script>
 
