--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <script src="./scripts/scenery.js"></script>
     <script src="./scripts/rocket.js"></script>
     <script src="./scripts/recursiveTree.js"></script>
+    <script src="./scripts/blaster.js"></script>
     <script src="./scripts/character.js"></script>
     <script src="./scripts/mountain.js"></script>
     <script src="./scripts/platform.js"></script>
