--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <script src="./scripts/character.js"></script>
     <script src="./scripts/mountain.js"></script>
     <script src="./scripts/platform.js"></script>
+    <script src="./scripts/enemy.js"></script>
     <script src="./scripts/canyon.js"></script>
     <script src="./scripts/flagpole.js"></script>
 
