--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     <script src="./scripts/recursiveTree.js"></script>
     <script src="./scripts/blaster.js"></script>
     <script src="./scripts/character.js"></script>
-    <script src="./scripts/mountain.js"></script>
     <script src="./scripts/platform.js"></script>
     <script src="./scripts/enemy.js"></script>
+    <script src="./scripts/collectable.js"></script>
     <script src="./scripts/canyon.js"></script>
     <script src="./scripts/flagpole.js"></script>
 
