--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <!-- Libraries -->
     <script src="./libraries/p5.min.js"></script>
+    <script src="./libraries/p5.sound.min.js"></script>
 
     <!-- Custom scripts -->
     <script src="./scripts/cloud.js"></script>
